# think_in_cxx

./: .gitmodules  CMakeLists.txt  conanfile.txt
cmake/: gtest.cmake
foo_lib/: CMakeLists.txt  print_hello.cpp  print_hello.h
foo_lib/src/: print_hello.cpp
playground/TMP_tutorial/: CMakeLists.txt  loop_test.cpp  main.cpp  meta_function_test.cpp  type_list_test.cpp
playground/module_demo/: CMakeLists.txt
playground/spinning_cube/: main.cpp
python/algorithm/: mesh_partition.py
python/cmd_script/: run_cmd.py
python/numerical/: loss_significant_demo.py  order_of_finite_diference.py
scripts/: build  run
test/: 19_04_02.cpp  Any_Optional_Variant_Test.cpp  CMakeCache.txt  Cxx_Variant_Test.cpp  ECSSystemTest.cpp  EigenTest.cpp  ExceptionTest.cpp  Finally.cpp  FunctionReturnValueCauseCopy.cpp  GtestUsage.cpp  MultiThreadTest.cpp  MySharedPtr.cpp  OverloadTest.cpp  Pointer.cpp  ProcessTest.cpp  State_Pattern_Test.cpp  StdMapTest.cpp  StdVectorTest.cpp  TestConstructor.cpp  VariableTest.cpp  avx.cpp  function_pointer.cpp  main.cpp  show_bytes.cpp
test/BS/: 15_3_1.cpp
test/Jeff_Langr/c2/1/: Soundex.h  SoundexTest.cpp
test/Jeff_Langr/c5/: Http.h  PlaceDescriptionServiceTest.cpp
test/Packt/: tic_tac_toe.cpp
test/alg/: binary_tree.cpp  bvh.cpp  sort.cpp
test/concurency/: Chp2.cpp  Chp2_L0208.cpp  Chp4_L0401.cpp
test/cuda/: function_pointer.cu  template_kernel.cu
test/cxx23/: deducing_this.cpp
test/data_structure/: heap.cpp
test/design/: dispatch_member.cpp  maybe_monad.cpp  product_factory.cpp  runtime_polymorphism.cpp
test/design/product_factory/: concrete_product.cpp  concrete_product.h  product.h
test/design_pattern/: Builder_Test.cpp  Factory_Test.cpp  Observer_Test.cpp  Open_Closed_Principle_Test.cpp  Singleton_Test.cpp  State_Pattern_Test.cpp  Type_Erasure_Test.cpp  Visitor_Test.cpp  acyclic_visitor.cpp  signal_slot_test.cpp  value_polymorphism.cpp
test/dump_state/: Dump_State_Test.cpp
test/functional/: maybe.cpp
test/gtest/: gmock_test.cpp  parameter_test.cpp  type_parameter_test.cpp
test/intro_2_alg/: qsort_test.cpp
test/lang/: 19_03_21.cpp  Cxx_Any_Test.cpp  Cxx_Optional_Test.cpp  Cxx_Variant_Test.cpp  MyMatrixMath.cpp  MySharedPtr.cpp  StdMapTest.cpp  StdVectorTest.cpp  Std_Set_Test.cpp  Subclass_Visit_Supclass.cpp  TestSharePointer.cpp  TestUniquePointer.cpp  UnwindingTest.cpp  Volatile.cpp  WriteFile.cpp  chrono_test.cpp  concept_test.cpp  deduction_guide.cpp  macro.cpp  module.cpp  random.cpp  refer_class_member_data.cpp  reference.cpp  special_methods.cpp  static_reflection.cpp  std_list_test.cpp  template_concept.cpp  template_crtp.cpp  use_foo.cpp  variadic_template.cpp  vector.cpp  virtual_non_virtual.cpp
test/lang/module/: math.ixx  math_imp.cpp  math_partition.cpp
test/little_projects/: show_hand.cpp
test/primer/C13/: ActLikePointer.cpp  ActLikeValue.cpp  MessageAndFolder.cpp
test/qt/: qtHello.cpp
test/quiz/: ExceptionSafeTest.cpp  FileManipulationTest.cpp
test/serializer/: serializer_test.cpp
test/tbb/: parallel_log.cpp  tbb_test.cpp
test/template_meta/: compendium.cpp  event_dispatch.cpp  loop_enum.cpp  loop_types.cpp  multi_method.cpp  partial_specalization_to_dispatch.cpp  static_loop.cpp  string_parameter.cpp  type_deduction.cpp  type_list.cpp  type_map.cpp
test/threading/: basic_use.cpp  condition_variable.cpp  thread_pool.cpp
test/tools/: profiler.cpp
